# single_jobboard

./: .gitignore  app.py  pyproject.toml
frontend/: gatsby-browser.js  gatsby-config.js  package.json  tailwind.config.js
single_jobboard/: __init__.py  exceptions.py  logger.py  webdriver.py
single_jobboard/channels/: __init__.py  glassdoor.py
single_jobboard/clients/: web_scraper.py
single_jobboard/config/: __init__.py  application.py  logging.py  webdriver.py
single_jobboard/models/: __init__.py  channel.py  company.py  job.py  location.py
single_jobboard/utils/: exception_handler.py  url.py  web_scraper.py
single_jobboard/views/: job.py  urls.py
tests/: test_single_jobboard.py
